<resources>
    <string name="app_name">Infinite 7card</string>
    <string name="home_id_hint">e.g. 372913</string>
    <string name="home_generate">Generate QR</string>
    <string name="qr_dismiss">CLOSE</string>
    <string name="main_access">Access</string>
    <string name="main_get_id">Decrypt QR</string>
    <string name="qr_title">Scan &amp; Play</string>
    <string name="qr_description">Scan the access code at the gym reception</string>
    <string name="qr_account_number">7Card number:</string>
    <string name="decrypt_hint">Base64 string</string>
    <string name="main_list">Saved users</string>
    <string name="list_no_alias">No alias</string>
    <string name="dialog_user_alias_hint">Alias</string>
    <string name="dialog_user_delete">Delete</string>
    <string name="dialog_user_save">Save</string>
    <string name="list_no_users">No users were saved</string>
</resources>
