<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="vm"
            type="ro.marc.sevencard.ui.fragments.list.UserDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_dialog"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:fontFamily="@font/bold_extra"
            android:textColor="@color/accent"
            android:text="@{vm.title}"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/alias"
            tools:text="389382" />

        <EditText
            style="@style/editText"
            android:id="@+id/alias"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_user_alias_hint"
            android:text="@={vm.alias}"
            android:autofillHints="null"
            android:importantForAutofill="no"
            android:drawableStart="@drawable/icon_signature_small"
            android:layout_marginTop="32dp"
            app:layout_constraintWidth_percent=".7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toTopOf="@+id/delete" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_user_delete"
            android:layout_marginTop="32dp"
            android:textColor="@android:color/holo_red_dark"
            android:onClick="@{() -> vm.remove()}"
            app:layout_constraintWidth_default="wrap"
            app:layout_constraintTop_toBottomOf="@id/alias"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_user_save"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/accent"
            android:onClick="@{() -> vm.save()}"
            app:layout_constraintWidth_default="wrap"
            app:layout_constraintTop_toTopOf="@id/delete"
            app:layout_constraintBottom_toBottomOf="@id/delete"
            app:layout_constraintStart_toEndOf="@id/delete"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
